# OS2Code

./: README.md
OPUS4.5/: CLAUDE.md  iso_build.md  readme.md
OPUS4.5/boot/: boot.asm  boot_iso.asm
OPUS4.5/drivers/: keyboard.cpp  keyboard.h  vga.cpp  vga.h
OPUS4.5/kernel/: entry.asm  kernel.cpp  string.cpp  string.h  types.h
OPUS4.5/shell/: shell.cpp  shell.h
OS2_Wrapper/: CLAUDE.md  GETTING_STARTED.md  Makefile  os2Loader.md  os2_emulator  os2_emulator.c  os2_emulator.md  os2_loader.c  os2_with_api.c  os2_with_api.md  os2_with_api_copy.old  os2loader  os2run  readme.md  test.txt
OS2_Wrapper/newcode/: API_Call.md  DLL_Calls.md  dependency.md  dependency_analyzer.cpp  newcode.cpp  readme.md
side_project/: AbstractLayer.cpp  CMakeLists.txt  OSFree.md  SMPScheduler.cpp  readme.md
simpleos-main/: README.md
simpleos-main/simpleos/: DOSAPI_IMPLEMENTATION.md  ISO_TEST_REPORT.md  Makefile  PARENT_CHILD_HIERARCHY.md  PROCESS_MANAGEMENT_SUCCESS.md  PROCESS_TERMINATION.md  USER_MODE_PROCESSES_SUCCESS.md  USER_MODE_TEST_RESULTS.md  boot.asm  dosapi.c  dosapi.h  events.c  events.h  gdt.c  graphics.c  idt.c  io.asm  isr.asm  kernel.c  keyboard.c  linker.ld  mouse.c  pmm.c  pmm.h  printf.c  process.c  process.h  ramfs.c  ramfs.h  scheduler.c  scheduler.h  switch.asm  syscall.c  test_proc.c  timer.c  types.h  usermode.c  usermode.h  vga.c  vga.h  (+2 more)
